--- a/app/src/main/res/layout/places_detail_fragment.xml
+++ b/app/src/main/res/layout/places_detail_fragment.xml
@@ -1,4 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:background="@android:color/white"
@@ -13,59 +17,190 @@
     </android.support.v4.view.ViewPager>
 
 
-
-    <LinearLayout
-        android:id="@+id/layout"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_below="@+id/pager"
-        android:orientation="horizontal"
-      >
-
     <org.lucasr.twowayview.widget.TwoWayView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/list"
+        android:layout_below="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="60dp"
         style="@style/TwoWayView"
         app:twowayview_layoutManager="ListLayoutManager"/>
-
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_below="@+id/layout"
-        android:layout_marginTop="10dp"
+        android:layout_below="@+id/list"
+        android:id="@+id/layout_disc"
+        android:layout_marginTop="5dp"
         android:weightSum="4">
 
         <TextView
 
             android:id="@+id/title"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:textSize="24sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="1dp"
+            android:layout_height="0dp"
+            android:textSize="25sp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:gravity="center"
             android:textStyle="bold"
             android:layout_weight="1"/>
  <ScrollView
      android:layout_width="match_parent"
-     android:layout_height="match_parent">
+     android:layout_weight="3"
+     android:layout_height="0dp">
         <TextView
             android:id="@+id/disc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_margin="5dp"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="3"/>
+            />
  </ScrollView>
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_below="@id/layout_disc"
+        android:layout_height="match_parent"
+        android:padding="0.1dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="26dp"
+        android:layout_marginRight="26dp"
+        android:background="@drawable/line_history"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:id="@+id/location"
+        android:orientation="vertical"
+        android:layout_below="@+id/layout_disc"
+        android:layout_marginTop="25dp"
+        android:weightSum="2">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Location"
+           android:textStyle="bold"
+            android:layout_weight="1"
+            android:textSize="25sp"
+            android:gravity="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Pakistan > Punjab > Lahore"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:gravity="center"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:id="@+id/layout_map"
+        android:orientation="vertical"
+        android:layout_below="@+id/location"
+        android:layout_marginTop="5dp">
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:id="@+id/layout_type"
+        android:weightSum="2"
+        android:layout_below="@+id/layout_map">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Type:"
+            android:layout_marginLeft="35dp"
+            android:textSize="16sp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+           android:id="@+id/type"
+            android:textSize="16sp"/>
+        </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_below="@id/layout_type"
+        android:layout_height="match_parent"
+        android:padding="0.1dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="22dp"
+        android:layout_marginRight="22dp"
+        android:background="@drawable/line_history"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:id="@+id/layout_added"
+        android:weightSum="2"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/layout_type">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Added:"
+            android:layout_marginLeft="35dp"
+            android:textSize="16sp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/added"
+            android:textSize="16sp"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_below="@id/layout_added"
+        android:layout_height="match_parent"
+        android:padding="0.1dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="22dp"
+        android:layout_marginRight="22dp"
+        android:background="@drawable/line_history"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:id="@+id/layout_added_by"
+        android:weightSum="2"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/layout_added">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Added by:"
+            android:layout_marginLeft="35dp"
+            android:textSize="16sp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:id="@+id/added_by"
+            android:textSize="16sp"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_below="@id/layout_added_by"
+        android:layout_height="match_parent"
+        android:padding="0.1dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="22dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="22dp"
+        android:background="@drawable/line_history"/>
 
 </RelativeLayout>
+</ScrollView>
