--- a/app/src/main/res/layout/item_gallery.xml
+++ b/app/src/main/res/layout/item_gallery.xml
@@ -7,6 +7,7 @@
 <ImageView
     android:layout_width="90dp"
     android:layout_height="60dp"
+    android:layout_marginRight="5dp"
     android:scaleType="fitXY"
     android:layout_centerHorizontal="true"
     android:id="@+id/photo_image"/>
