--- a/app/src/main/res/layout/places_detail_fragment.xml
+++ b/app/src/main/res/layout/places_detail_fragment.xml
@@ -94,10 +94,11 @@
             android:orientation="vertical"
             android:layout_below="@+id/location"
             android:layout_marginTop="5dp">
-            <com.google.android.gms.maps.MapView
+            <fragment
                 android:id="@+id/mapView"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:name="com.google.android.gms.maps.SupportMapFragment"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
