--- a/app/src/main/res/layout/places_detail_fragment.xml
+++ b/app/src/main/res/layout/places_detail_fragment.xml
@@ -16,7 +16,6 @@
 
 
         <org.lucasr.twowayview.widget.TwoWayView
-            xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/list"
             android:layout_below="@+id/pager"
@@ -106,6 +105,7 @@
             android:orientation="horizontal"
             android:id="@+id/layout_type"
             android:weightSum="2"
+            android:layout_marginTop="15dp"
             android:layout_below="@+id/layout_map">
             <TextView
                 android:layout_width="match_parent"
