--- a/app/src/main/res/layout/places_fragment.xml
+++ b/app/src/main/res/layout/places_fragment.xml
@@ -15,8 +15,8 @@
         android:layout_above="@+id/footer"
         android:layout_height="wrap_content">
         <GridView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/city_details"
             android:horizontalSpacing="0dp"
             android:verticalSpacing="0dp"
