--- a/app/src/main/res/layout/blog_pager_adapter_item.xml
+++ b/app/src/main/res/layout/blog_pager_adapter_item.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentTop="true" >
 
         <ImageView
-            android:id="@+id/logo_main"
+            android:id="@+id/logo_blog"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:scaleType="fitXY"
@@ -20,18 +20,17 @@
 
 
         <TextView
-            android:id="@+id/title_places"
+            android:id="@+id/title_blog"
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:background="#BB000000"
             android:textColor="@android:color/white"
             android:singleLine="true"
-            android:text="hjfhhyj"
             android:gravity="center"
             android:textSize="16sp"
             android:padding="5dp"
-            android:layout_alignBottom="@+id/logo_main"
-           />
+            android:layout_alignBottom="@+id/logo_blog"
+            />
 
 
     </RelativeLayout>
