adview and push notifications added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:background="@android:color/white"
     tools:context=".MainActivity">
@@ -24,6 +25,14 @@
 </RelativeLayout>
 
 
+    <com.google.android.gms.ads.AdView
 
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="ca-app-pub-6939500014189035/5918151304"
+       android:layout_gravity="bottom"
+        />
 
 </FrameLayout>
