--- a/app/src/main/res/layout/layout_dropdownmenu.xml
+++ b/app/src/main/res/layout/layout_dropdownmenu.xml
@@ -104,6 +104,13 @@
                 android:paddingLeft="20dp"
                 android:layout_gravity="center_vertical"/>
 
+            <Switch
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Switch"
+                android:id="@+id/switch1"
+                android:layout_weight="1" />
+
             <!--<Switch-->
                 <!--android:layout_width="wrap_content"-->
                 <!--android:layout_height="wrap_content"-->
