--- a/app/src/main/res/layout/pager_fragment.xml
+++ b/app/src/main/res/layout/pager_fragment.xml
@@ -1,9 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/main"
     tools:ignore="MergeRootFrame" >
 
 
@@ -26,7 +27,20 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/pagerForList"
         android:layout_below="@+id/tabs"
+        android:layout_above="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+
+       <com.google.android.gms.ads.AdView
+
+           android:id="@+id/adView"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           ads:adSize="SMART_BANNER"
+           ads:adUnitId="ca-app-pub-6939500014189035/5918151304"
+           android:layout_alignParentBottom="true"
+
+           />
 
 </RelativeLayout>
