--- a/app/src/main/res/layout/places_detail_fragment.xml
+++ b/app/src/main/res/layout/places_detail_fragment.xml
@@ -1,15 +1,35 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+
+
+<include
+    layout="@layout/detail_actionbar"
+    android:layout_width="match_parent"
+    android:layout_height="55dp"
+     />
+
+
+<ScrollView
+
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:scrollbarSize="2dp"
+    android:scrollbars="none"
+
     >
+
     <RelativeLayout
         android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
-        <android.support.v4.view.ViewPager
+
+          <android.support.v4.view.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="205dp">
@@ -80,21 +100,13 @@
                 android:layout_weight="1"
                 android:textSize="25sp"
                 android:gravity="center"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Pakistan > Punjab > Lahore"
-                android:layout_weight="1"
-                android:textSize="20sp"
-                android:gravity="center"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:id="@+id/layout_map"
             android:orientation="vertical"
-            android:layout_below="@+id/location"
-            android:layout_marginTop="5dp">
+            android:layout_below="@+id/location">
             <fragment
                 android:id="@+id/places_mapView"
                 android:layout_width="match_parent"
@@ -194,9 +206,10 @@
             android:padding="0.1dp"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="22dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="40dp"
             android:layout_marginRight="22dp"
             android:background="@drawable/line_history"/>
 
     </RelativeLayout>
 </ScrollView>
+    </LinearLayout>
