--- a/app/src/main/res/layout/detail_actionbar.xml
+++ b/app/src/main/res/layout/detail_actionbar.xml
@@ -5,8 +5,8 @@
     android:background="#189FA1"
     >
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginLeft="5dp"
             android:background="@drawable/arroww"
             android:id="@+id/home_detail"
@@ -18,36 +18,35 @@
         android:layout_height="match_parent"
         android:id="@+id/title_header"
         android:textSize="18sp"
-        android:ems="10"
+        android:ems="18"
         android:ellipsize="end"
         android:singleLine="true"
         android:gravity="center"
         android:layout_marginLeft="7dp"
         android:layout_toRightOf="@+id/home_detail"
-        android:layout_toLeftOf="@+id/star"
         android:layout_centerHorizontal="true"
         android:textColor="@android:color/white"
       />
-    <ImageView
-        android:layout_width="23dp"
-        android:layout_height="20dp"
-        android:id="@+id/star"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/star"
-        android:layout_toLeftOf="@+id/dadd"
-        android:layout_centerVertical="true"
-        />
-    <ImageView
-        android:layout_width="23dp"
-        android:layout_height="20dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/share"
-        android:id="@+id/dadd"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        />
+    <!--<ImageView-->
+        <!--android:layout_width="23dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:id="@+id/star"-->
+        <!--android:layout_marginLeft="5dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:background="@drawable/star"-->
+        <!--android:layout_toLeftOf="@+id/dadd"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--/>-->
+    <!--<ImageView-->
+        <!--android:layout_width="23dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:layout_marginLeft="5dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:background="@drawable/share"-->
+        <!--android:id="@+id/dadd"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--/>-->
 
 </RelativeLayout>
