--- a/app/src/main/res/layout/events_detail_fragment.xml
+++ b/app/src/main/res/layout/events_detail_fragment.xml
@@ -33,14 +33,25 @@
                 android:layout_below="@+id/event_pager"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+
                 style="@style/TwoWayView"
                 app:twowayview_layoutManager="ListLayoutManager"/>
+            <com.google.android.gms.ads.AdView
 
+                android:id="@+id/adView"
+                android:layout_below="@id/event_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                ads:adSize="SMART_BANNER"
+
+                ads:adUnitId="ca-app-pub-6939500014189035/5918151304">
+
+            </com.google.android.gms.ads.AdView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_below="@+id/event_list"
+                android:layout_below="@+id/adView"
                 android:id="@+id/layout_disc"
                 android:layout_marginTop="5dp"
                 android:weightSum="4">
@@ -49,22 +60,19 @@
 
                     android:id="@+id/event_head"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:textSize="25sp"
-                    android:ellipsize="end"
-                    android:singleLine="true"
+                    android:maxLines="2"
                     android:gravity="center"
-                    android:textStyle="bold"
-                    android:layout_weight="1"/>
+                    android:textStyle="bold"/>
                 <TextView
                     android:id="@+id/event_disc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
-                    android:gravity="center"
-                    android:layout_margin="5dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
+
+                    android:paddingLeft="5dp"
+                    android:paddingRight="8dp"
                     />
             </LinearLayout>
             <View
@@ -202,17 +210,7 @@
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
                 android:background="@drawable/line_history"/>
-            <com.google.android.gms.ads.AdView
 
-                android:id="@+id/adView"
-                android:layout_below="@id/view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                ads:adSize="SMART_BANNER"
-                android:layout_alignParentBottom="true"
-                ads:adUnitId="ca-app-pub-6939500014189035/5918151304">
-
-        </com.google.android.gms.ads.AdView>
         </RelativeLayout>
 
         </ScrollView>
