--- a/app/src/main/res/layout/people_detail_fragment.xml
+++ b/app/src/main/res/layout/people_detail_fragment.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/people_pager"
                 android:layout_width="match_parent"
                 android:layout_height="205dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 >
 
             </android.support.v4.view.ViewPager>
@@ -49,14 +49,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 style="@style/TwoWayView"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:twowayview_layoutManager="ListLayoutManager"/>
-           </LinearLayout>
+
+
+         </LinearLayout>
+            <com.google.android.gms.ads.AdView
+
+                android:id="@+id/adView"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                ads:adSize="SMART_BANNER"
+                android:layout_below="@id/lay"
+
+                ads:adUnitId="ca-app-pub-6939500014189035/5918151304">
+            </com.google.android.gms.ads.AdView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_below="@+id/lay"
+                android:layout_below="@+id/adView"
                 android:id="@+id/layout_disc"
                 android:layout_marginTop="5dp"
                 android:weightSum="4">
@@ -64,23 +76,23 @@
 
                     android:id="@+id/people_head"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:textSize="25sp"
-                    android:ellipsize="end"
-                    android:singleLine="true"
+                    android:maxLines="2"
                     android:gravity="center"
                     android:textStyle="bold"
-                    android:layout_weight="1"/>
+                   />
                 <TextView
+                    xmlns:ext="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/people_disc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:textSize="16sp"
-                    android:gravity="center"
-                    android:layout_margin="5dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
-                    />
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+
+
+                   />
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
@@ -89,32 +101,16 @@
                 android:padding="0.1dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="26dp"
+                android:id="@+id/view2"
                 android:layout_marginRight="26dp"
                 android:background="@drawable/line_history"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:id="@+id/location"
-                android:orientation="vertical"
-                android:layout_below="@+id/layout_disc"
-                android:layout_marginTop="25dp"
-                android:weightSum="2">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Location"
-                    android:textStyle="bold"
-                    android:id="@+id/people_loaction"
-                    android:layout_weight="1"
-                    android:textSize="25sp"
-                    android:gravity="center"/>
-            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
                 android:id="@+id/people_layout_map"
                 android:orientation="vertical"
-                android:layout_below="@+id/location">
+                android:layout_below="@+id/view2">
                 <fragment
                     android:id="@+id/people_mapView"
                     android:layout_width="match_parent"
@@ -122,6 +118,7 @@
 
                     android:name="com.google.android.gms.maps.SupportMapFragment"/>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -218,16 +215,7 @@
                 android:layout_marginLeft="22dp"
                 android:layout_marginRight="22dp"
                 android:background="@drawable/line_history"/>
-            <com.google.android.gms.ads.AdView
 
-                android:id="@+id/adView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                ads:adSize="SMART_BANNER"
-                android:layout_below="@id/view"
-                ads:adUnitId="ca-app-pub-6939500014189035/5918151304"
-                >
-                </com.google.android.gms.ads.AdView>
         </RelativeLayout>
 
     </ScrollView>
