--- a/app/src/main/res/layout/twentyfifteen.xml
+++ b/app/src/main/res/layout/twentyfifteen.xml
@@ -16,16 +16,9 @@
         android:layout_height="wrap_content">
         <GridView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/city_details"
-            android:horizontalSpacing="0dp"
-            android:verticalSpacing="0dp"
-            android:stretchMode="columnWidth"
-            android:rowCount="2"
-            android:smoothScrollbar="true"
-            android:scrollbarSize="0dp"
-            android:columnWidth="100dp"
-            android:gravity="center"
-            android:layout_centerHorizontal="true" />
+            android:layout_height="wrap_content"
+            android:id="@+id/fifteen_details" />
     </RelativeLayout>
+
+
 </LinearLayout>
