--- a/app/src/main/res/layout/twentyfifteen_pager_item.xml
+++ b/app/src/main/res/layout/twentyfifteen_pager_item.xml
@@ -8,25 +8,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" >
         <ImageView
-            android:id="@+id/logo_main"
+            android:id="@+id/tewntyfifteen_main"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:scaleType="fitXY"
             android:src="@drawable/placeholder" />
 
-        <TextView
-            android:id="@+id/title_places"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:background="#BB000000"
-            android:textColor="@android:color/white"
-            android:singleLine="true"
-            android:text="hjfhhyj"
-            android:gravity="center"
-            android:textSize="16sp"
-            android:padding="5dp"
-            android:layout_alignBottom="@+id/logo_main"
-           />
-</RelativeLayout>
+    </RelativeLayout>
 </LinearLayout>
-
